--- a/1712번_손익분기점/n1712_손익분기점.md
+++ b/1712번_손익분기점/n1712_손익분기점.md
@@ -30,6 +30,28 @@
 11
 ```
 ---
+##### 나의 코드
+```
+import sys
+
+costs = input()
+
+A, B, C = map(int,costs.split(' '))
+
+if B >= C : 
+    ans = -1
+else:
+    ans = A//(C-B) + 1
+1000
+
+print(ans)
+```
+---
+##### 결과
+> 처음에 sys.exit()함수를 통해 B>=C일 때 프로그램을 종료하려고 하였는데, sys.exit(1)로 사용해서 런타임 에러가 발생했다.  
+sys.exit() 함수를 사용하지 않거나 sys.exit(0)을 사용하여 해결하였다.
+
+
 
 
 
