--- a/1929번_소수구하기/1929번_소수구하기.md
+++ b/1929번_소수구하기/1929번_소수구하기.md
@@ -22,3 +22,19 @@
 13
 ```
 ---
+### 나의 코드
+> 숫자 범위 사이를 모두 돌면서 각 숫자가 소수인지 아닌지 판단하여 출력
+
+```
+def primeNum(num):
+    for i in range(2,num):
+        if num%i == 0:
+            return False
+    return True
+
+M, N = map(int,input().split(' '))
+
+for i in range(M,N+1):
+    if primeNum(i):
+        print(i)
+```
