--- a/1929번_소수구하기/1929번_소수구하기.md
+++ b/1929번_소수구하기/1929번_소수구하기.md
@@ -38,3 +38,35 @@ for i in range(M,N+1):
     if primeNum(i):
         print(i)
 ```
+### 결과
+> 시간초과  
+시간복잡도의 개념은 아직 자세히 모르지만 O(n^2)이 되어서 시간초과가 발생하는 것 같다.  
+---
+### 다른 방법
+> '에라토스테네스의 체'  
+
+1. 2부터 시작해서 n까지 진행한다.
+2. 가장 작은 수를 선택한다.
+3. 그 작은 수를 소수라고 가정하고 작은 수 부터 n까지 그 작은 수의 배수를 모두 제거한다.
+
+#### code
+```
+#에라토스테네스의 체
+
+M,N = map(int,input().split(' '))
+
+numbers = [True]*(N+1)
+numbers[1] = False
+
+for i in range(2,round(N**0.5+0.5)):
+    if numbers[i]:
+        cnt = 2
+        while(cnt * i <= N):
+            numbers[cnt*i] = False
+            cnt += 1
+
+for i in range(M,N+1):
+    if numbers[i]:
+        print(i)
+```
+
