--- a/1074번_Z/1074번_Z.md
+++ b/1074번_Z/1074번_Z.md
@@ -33,3 +33,61 @@
 63
 ```
 ---
+
+### 나의 코드
+1. 문제에서 요구하는 맵의 크기만큼 생성을 하고 하나씩 돌면서 원하는 좌표값을 찾는다.  
+=> (2^15) X (2^15) 개의 맵을 모두 돌아야하는 경우 시간초과 발생할 것
+
+2.  가장 작은 정사각형 맵 내부부터 돌면서 원하는 좌표값을 찾지 못하면 더 큰 맵에서 좌표를 찾는다.
+```
+# import sys
+# sys.setrecursionlimit(10**6)
+
+user_input = input()
+
+N, r, c = map(int,user_input.split(' '))
+cnt = 0
+found = False
+def explore(size, x, y):
+    global found
+    global cnt
+
+    if found :
+        return
+
+    if size == 2:
+        if x == r and y == c:
+            found = True
+            return   
+        # print(cnt)        
+        cnt += 1
+
+        if x == r and y + 1 == c:
+            found = True
+            return
+        # print(cnt)
+        cnt += 1
+ 
+        if x + 1 == r and y == c:
+            found = True
+            return
+        # print(cnt)
+        cnt += 1
+
+        if x + 1 == r and y + 1== c:
+            found = True
+            return
+        # print(cnt)
+        cnt += 1
+        return
+
+
+    explore(int(size/2), x, y)
+    explore(int(size/2), x, y + int(size/2))
+    explore(int(size/2), x + int(size/2), y)
+    explore(int(size/2), x + int(size/2), y + int(size/2))
+
+explore(1<<N, 0, 0)
+
+print(cnt)
+```
