--- a/_posts/2020-01-22-N-Queen.md
+++ b/_posts/2020-01-22-N-Queen.md
@@ -19,3 +19,114 @@
 92
 ```
 ---
+### 나의 코드
+> 실제로 이차원 배열을 만들고, 세로 줄 마다 하나씩 배치하고 가능 한 자리에서 다음 세로 줄로 넘어가면서 재귀함수를 썼다.  
+결과는 시간초과.. 이차원 배열에서 현재 자리에 퀸이 서 있을 수 있는지 확인하는 과정이 너무 복잡한 것 같다.
+```
+N = int(input())
+cnt = 0
+
+chess = [[0 for i in range(N)] for j in range(N)]
+
+def move_right(x,y):
+    return x+1,y
+def move_left(x,y):
+    return x-1,y
+def move_up(x,y):
+    return x-1,y+1
+def move_down(x,y):
+    return x-1,y-1
+
+def isFine(x,y):
+    fix_x = x
+    fix_y = y
+    
+    while True:
+        x,y = move_left(x,y)
+        if x < 0:
+            break
+        if chess[x][y] == 1:
+            return False
+    x = fix_x
+    y = fix_y
+    while True:
+        x,y = move_up(x,y)
+        if x < 0 or y >= N:
+            break
+        if chess[x][y] == 1:
+            return False
+    
+    x = fix_x
+    y = fix_y
+    while True:
+        x,y = move_down(x,y)
+        if x < 0 or y < 0:
+            break
+        if chess[x][y] == 1:
+            return False
+    
+    return True
+
+def 
+
+def queen(x,y,depth):
+    chess[x][y] = 1
+    global cnt
+
+    if depth == N-1:
+        cnt += 1
+        return
+
+    for i in range(N):
+        if not isFine(x+1,i):
+            continue
+        queen(x+1,i,depth+1)
+        chess[x+1][i] = 0
+    chess[x][y] = 0
+
+for i in range(N):
+    queen(0,i,0)
+
+print(cnt)
+```
+> 새로운 방법으로 이차원 배열을 만들지 않고 일차원 배열의 값에 들어가 있는 숫자로 y축의 위치를 판단하기로 하였다.
+### code
+```
+N = int(input())
+cnt = 0
+
+chess = [0 for i in range(N)]
+
+def isFine(n,loc):
+    for i in range(n):
+        if chess[i] == loc:
+            return False
+        
+        if chess[i] - loc == n - i:
+            return False
+        
+        if loc - chess[i] == n - i:
+            return False
+    
+    return True
+
+def queen(n,location,depth):
+    global cnt
+    chess[n] = location
+    if depth == N-1:
+        cnt += 1
+        return
+    
+    for i in range(N):
+        if not isFine(n+1,i):
+            continue
+        queen(n+1, i, depth+1)
+        chess[n+1] = 0
+
+for i in range(N):
+    queen(0,i,0)
+    chess[0] = 0
+
+print(cnt)
+```
+> 결과는 맞았습니다!
