Add 스도쿠 나의 코드

--- a/_posts/2020-01-22-스도쿠.md
+++ b/_posts/2020-01-22-스도쿠.md
@@ -1,6 +1,6 @@
 # 2580번 스도쿠
 ### 문제
-> 스도쿠는 18세기 스위스 수학자가 만든 '라틴 사각형'이랑 퍼즐에서 유래한 것으로 현재 많은 인기를 누리고 있다. 이 게임은 아래 그림과 같이 가로, 세로 각각 9개씩 총 81개의 작은 칸으로 이루어진 정사각형 판 위에서 이뤄지는데, 게임 시작 전 몇 몇 칸에는 1부터 9까지의 숫자 중 하나가 쓰여 있다.
+> 스도쿠는 18세기 스위스 수학자가 만든 '라틴 사각형'이랑 퍼즐에서 유래한 것으로 현재 많은 인기를 누리고 있다. 이 게임은 아래 그림과 같이 가로, 세로 각각 9개씩 총 81개의 작은 칸으로 이루어진 정사각형 판 위에서 이뤄지는데, 게임 시작 전 몇 몇 칸에는 1부터 9까지의 숫자 중 하나가 쓰여 있다.  
 ![](https://www.acmicpc.net/upload/images/jF1kwmQaGGRM3t9ESvpTvW34kCnB2.png)
 
 > 나머지 빈 칸을 채우는 방식은 다음과 같다.
@@ -53,5 +53,52 @@
 2 5 8 3 9 4 7 6 1
 ```
 ---
+### 나의 코드
+> 빈 좌표를 찾고 빈 좌표에 들어갈 수 있는 후보 숫자들을 넣으면서 백트래킹한다.
+```
+import sys
+
+sdk = []
+for i in range(9):
+    tmp = list(map(int,input().split()))
+    sdk.append(tmp)
+
+zeros = [(i,j) for i in range(9) for j in range(9) if sdk[i][j] == 0]
+
+def sudoku(depth):
+    if depth == len(zeros):
+        for row in sdk:
+            print(*row)
+        sys.exit(0)
+    
+    x = zeros[depth][0]
+    y = zeros[depth][1]
+    dx = (x//3)*3
+    dy = (y//3)*3
+
+    num_used = [True] + [False for i in range(9)]
+
+    for i in range(9):
+        if not num_used[sdk[x][i]]:
+            num_used[sdk[x][i]] = True
+        if not num_used[sdk[i][y]]:
+            num_used[sdk[i][y]] = True  
+
+    for i in range(dx,dx+3):
+        for j in range(dy,dy+3):
+            if not num_used[sdk[i][j]]:
+                num_used[sdk[i][j]] = True
+
+    candidate_num = [num for num in range(1,10) if not num_used[num]]
+
+    for num in candidate_num:
+        sdk[x][y] = num
+        sudoku(depth+1)
+        sdk[x][y] = 0
+    
+sudoku(0)
+```
+
+
 
 
