--- a/_posts/2020-01-23-연산자끼워넣기.md
+++ b/_posts/2020-01-23-연산자끼워넣기.md
@@ -60,3 +60,123 @@
 -24
 ```
 ---
+### 나의 코드
+> 백트래킹을 이용하여 숫자 사이사이에 모든 연산자를 대입해서 최댓값과 최솟값을 구한다.
+```
+N = int(input())
+numbers = list(map(int,input().split()))
+# 덧셈(0) 뺄셈(1) 곱셈(2) 나눗셈(3)
+operators = list(map(int,input().split()))
+min = 1000000000
+max = 0
+
+def operator_cal(oper,a,b):
+    if oper == 0:
+        return a+b
+    elif oper == 1:
+        return a-b
+    elif oper == 2:
+        return a*b
+    else:
+        if a > 0:
+            return a//b
+        else:
+            return -((-a)//b)
+
+# op = []
+
+def track(oper,sum_num,depth):
+    global max
+    global min
+    # global op
+
+    sum_num = operator_cal(oper,sum_num,numbers[depth])
+    # print(sum_num)
+    if depth == N-1:
+        # print(op)
+        if sum_num > max :
+            max = sum_num
+        if sum_num < min :
+            min = sum_num
+        
+        return
+    
+    for i in range(4):
+        if operators[i] > 0:
+            # op.append(i)
+            operators[i] -= 1
+            track(i,sum_num,depth+1)
+            # op.pop()
+            operators[i] += 1
+        
+for i in range(4):
+    if operators[i] >0:
+        # op.append(i)
+        operators[i] -= 1
+        track(i,numbers[0],1)
+        # op.pop()
+        operators[i] += 1
+
+print(max, min, sep = '\n')
+```
+> 틀렸습니다.
+### 수정
+> max 값을 처음에 0으로 놓고 진행을 하다보니 최댓값이 음수가 나오는 경우는 0을 출력하게 된다. max 초기값을 아주 작은 음수로 바꾸고 제출하였더니 맞았다!
+```
+N = int(input())
+numbers = list(map(int,input().split()))
+# 덧셈(0) 뺄셈(1) 곱셈(2) 나눗셈(3)
+operators = list(map(int,input().split()))
+min = 1000000000
+max = -1000000000
+
+def operator_cal(oper,a,b):
+    if oper == 0:
+        return a+b
+    elif oper == 1:
+        return a-b
+    elif oper == 2:
+        return a*b
+    else:
+        if a > 0:
+            return a//b
+        else:
+            return -((-a)//b)
+
+# op = []
+
+def track(oper,sum_num,depth):
+    global max
+    global min
+    # global op
+
+    sum_num = operator_cal(oper,sum_num,numbers[depth])
+    # print(sum_num)
+    if depth == N-1:
+        # print(op)
+        if sum_num > max :
+            max = sum_num
+        if sum_num < min :
+            min = sum_num
+        
+        return
+    
+    for i in range(4):
+        if operators[i] > 0:
+            # op.append(i)
+            operators[i] -= 1
+            track(i,sum_num,depth+1)
+            # op.pop()
+            operators[i] += 1
+        
+for i in range(4):
+    if operators[i] >0:
+        # op.append(i)
+        operators[i] -= 1
+        track(i,numbers[0],1)
+        # op.pop()
+        operators[i] += 1
+
+print(max, min, sep = '\n')
+```
+ 
