Add 스타트와링크 나의 코드

--- a/_posts/2020-01-23-스타트와링크.md
+++ b/_posts/2020-01-23-스타트와링크.md
@@ -58,3 +58,59 @@
 ### 나의 코드
 > 만약 i번과 j번이 같은 팀에 속해있다면 Sij와 Sji는 항상 같이 능력치가 포함되기 때문에 미리 능력치를 합쳐 놓는다.  
 NC2개의 능력치 경우의 수가 나오는데 그 중에서 절반만 중복되지 않게 뽑으면 뽑은 경우들의 점수와 뽑히지 않은 경우의 능력치 합의 차이를 구하면 된다.
+- 이렇게 할 경우 서로 팀이 아닌 경우에도 능력치가 합쳐지는 경우가 생겨서 답이 맞지 않다.  
+
+> 새로운 방법 : 사람 N명 중에 절반을 뽑아서 팀이 되었을 때 능력치를 합한다.  
+만약 4명중에 두명을 뽑는다면 1번과 2번을 뽑는 경우와 2번과 1번을 뽑는 경우는 한 번만 구하면 되기 때문에 처음 뽑은 사람보다 숫자가 높은 사람만 뽑아나간다.
+```
+N = int(input()) #N은 짝수
+
+maps = []
+
+for i in range(N):
+    maps.append(list(map(int,input().split())))
+
+# print(lists)
+min = 1000000000
+
+person = []
+
+def track(index,depth):
+    global min
+    global person
+
+    # print(depth)
+    if depth == N//2-1:
+        score = 0
+        other = 0
+        for i in range(N):
+            for j in range(i+1,N):
+                if i in person and j in person:
+                    score += maps[i][j]
+                    score += maps[j][i]
+                elif i not in person and j not in person:
+                    other += maps[i][j]
+                    other += maps[j][i]
+        result = abs(score-other)
+        # print(person, score , other)
+        if result < min :
+            min = result
+        return
+
+    for i in range(N):
+        if index >= i:
+            continue
+        
+        person.append(i)
+        track(i,depth+1)
+        person.pop()
+
+for i in range(N):
+    person.append(i)
+    track(i,0)
+    person.pop()
+
+print(min)
+```
+> 맞았습니다!
+
