--- a/_posts/2020-01-22-N과M(1).md
+++ b/_posts/2020-01-22-N과M(1).md
@@ -1,12 +1,16 @@
 # 15649번 N과 M
 ### 문제
 > 자연수 N과 M이 주어졌을 때, 아래 조건을 만족하는 길이가 M인 수열을 모두 구하는 프로그램을 작성하시오.
+>- 1부터 N까지 자연수 중에서 중복 없이 M개를 고른 수열  
 
-- 1부터 N까지 자연수 중에서 중복 없이 M개를 고른 수열
----
-### 입력
-> 첫째 줄에 자연수 N과 M이 주어진다. (1 ≤ M ≤ N ≤ 8)
----
+---  
+
+### 입력  
+
+> 첫째 줄에 자연수 N과 M이 주어진다. (1 ≤ M ≤ N ≤ 8)  
+
+---  
+
 ### 출력
 > 한 줄에 하나씩 문제의 조건을 만족하는 수열을 출력한다. 중복되는 수열을 여러 번 출력하면 안되며, 각 수열은 공백으로 구분해서 출력해야 한다.
 
@@ -75,7 +79,8 @@
 4 3 2 1
 ```
 ### 나의 코드 
-> 1부터 N까지의 숫자가 들어가 있는 리스트에서 하나씩 뽑는 함수를 재귀호출해서 깊이가 M-1이 되면 출력하고 리턴한다.
+> 1부터 N까지의 숫자가 들어가 있는 리스트에서 하나씩 뽑는 함수를 재귀호출해서 깊이가 M-1이 되면 출력하고 리턴한다.  
+
 ```
 user_input = input()
 
