--- a/_posts/2020-01-22-N과M(2).md
+++ b/_posts/2020-01-22-N과M(2).md
@@ -3,15 +3,19 @@
 > 자연수 N과 M이 주어졌을 때, 아래 조건을 만족하는 길이가 M인 수열을 모두 구하는 프로그램을 작성하시오.
 
 > 1부터 N까지 자연수 중에서 중복 없이 M개를 고른 수열
-고른 수열은 오름차순이어야 한다.
----
-### 입력
-> 첫째 줄에 자연수 N과 M이 주어진다. (1 ≤ M ≤ N ≤ 8)
----
-### 출력
-> 한 줄에 하나씩 문제의 조건을 만족하는 수열을 출력한다. 중복되는 수열을 여러 번 출력하면 안되며, 각 수열은 공백으로 구분해서 출력해야 한다.
+고른 수열은 오름차순이어야 한다.  
 
-> 수열은 사전 순으로 증가하는 순서로 출력해야 한다.
+---  
+
+### 입력
+> 첫째 줄에 자연수 N과 M이 주어진다. (1 ≤ M ≤ N ≤ 8)  
+
+---  
+
+### 출력
+> 한 줄에 하나씩 문제의 조건을 만족하는 수열을 출력한다. 중복되는 수열을 여러 번 출력하면 안되며, 각 수열은 공백으로 구분해서 출력해야 한다.  
+수열은 사전 순으로 증가하는 순서로 출력해야 한다.  
+
 ---
 ### 예제 입력 1
 ```
@@ -49,7 +53,8 @@
 ```
 ---
 ### 나의 코드
-> 15649번과 코드는 동일하지만 재귀호출 할 때 기존에는 뽑지 않았던 카드를 뽑으면 함수를 호출했는데 이번 문제에서는 뽑은 카드의 숫자가 이전에 뽑았던 카드의 숫자보다 클 때에만 함수를 호출하였다.
+> 15649번과 코드는 동일하지만 재귀호출 할 때 기존에는 뽑지 않았던 카드를 뽑으면 함수를 호출했는데 이번 문제에서는 뽑은 카드의 숫자가 이전에 뽑았던 카드의 숫자보다 클 때에만 함수를 호출하였다.  
+
 ```
 N, M = map(int,input().split())
 numbers = [i for i in range(1,N+1)]
