--- a/_posts/2020-01-22-소수구하기.md
+++ b/_posts/2020-01-22-소수구하기.md
@@ -1,13 +1,19 @@
 # 1929번 소수구하기
 ### 문제
-> M이상 N이하의 소수를 모두 출력하는 프로그램을 작성하시오.
----
+> M이상 N이하의 소수를 모두 출력하는 프로그램을 작성하시오.  
+
+---  
+
 ### 입력
-> 첫째 줄에 자연수 M과 N이 빈 칸을 사이에 두고 주어진다. (1 ≤ M ≤ N ≤ 1,000,000)
----
+> 첫째 줄에 자연수 M과 N이 빈 칸을 사이에 두고 주어진다. (1 ≤ M ≤ N ≤ 1,000,000)  
+
+---  
+
 ### 출력
-> 한 줄에 하나씩, 증가하는 순서대로 소수를 출력한다.
----
+> 한 줄에 하나씩, 증가하는 순서대로 소수를 출력한다.  
+
+---  
+
 ### 예제 입력
 ```
 3 16
@@ -40,8 +46,10 @@ for i in range(M,N+1):
 ```
 ### 결과
 > 시간초과  
-시간복잡도의 개념은 아직 자세히 모르지만 O(n^2)이 되어서 시간초과가 발생하는 것 같다.  
----
+시간복잡도가 O(n^2)이 되어서 시간초과가 발생한다.  
+
+---  
+
 ### 다른 방법
 > '에라토스테네스의 체'  
 
