--- a/_posts/2020-01-22-소수구하기.md
+++ b/_posts/2020-01-22-소수구하기.md
@@ -53,9 +53,9 @@ for i in range(M,N+1):
 ### 다른 방법
 > '에라토스테네스의 체'  
 
-1. 2부터 시작해서 n까지 진행한다.
-2. 가장 작은 수를 선택한다.
-3. 그 작은 수를 소수라고 가정하고 작은 수 부터 n까지 그 작은 수의 배수를 모두 제거한다.
+>1. 2부터 시작해서 n까지 진행한다.
+>2. 가장 작은 수를 선택한다.
+>3. 그 작은 수를 소수라고 가정하고 작은 수 부터 n까지 그 작은 수의 배수를 모두 제거한다.
 
 #### code
 ```
