--- a/_posts/2020-01-23-스타트와링크.md
+++ b/_posts/2020-01-23-스타트와링크.md
@@ -1,15 +1,17 @@
 # 14889번 스타트와 링크
 ### 문제
-> 오늘은 스타트링크에 다니는 사람들이 모여서 축구를 해보려고 한다. 축구는 평일 오후에 하고 의무 참석도 아니다. 축구를 하기 위해 모인 사람은 총 N명이고 신기하게도 N은 짝수이다. 이제 N/2명으로 이루어진 스타트 팀과 링크 팀으로 사람들을 나눠야 한다.
-
+> 오늘은 스타트링크에 다니는 사람들이 모여서 축구를 해보려고 한다. 축구는 평일 오후에 하고 의무 참석도 아니다. 축구를 하기 위해 모인 사람은 총 N명이고 신기하게도 N은 짝수이다. 이제 N/2명으로 이루어진 스타트 팀과 링크 팀으로 사람들을 나눠야 한다.  
 > BOJ를 운영하는 회사 답게 사람에게 번호를 1부터 N까지로 배정했고, 아래와 같은 능력치를 조사했다. 능력치 Sij는 i번 사람과 j번 사람이 같은 팀에 속했을 때, 팀에 더해지는 능력치이다. 팀의 능력치는 팀에 속한 모든 쌍의 능력치 Sij의 합이다. Sij는 Sji와 다를 수도 있으며, i번 사람과 j번 사람이 같은 팀에 속했을 때, 팀에 더해지는 능력치는 Sij와 Sji이다.
----
+---  
+
 ### 입력
 > 첫째 줄에 N(4 ≤ N ≤ 20, N은 짝수)이 주어진다. 둘째 줄부터 N개의 줄에 S가 주어진다. 각 줄은 N개의 수로 이루어져 있고, i번 줄의 j번째 수는 Sij 이다. Sii는 항상 0이고, 나머지 Sij는 1보다 크거나 같고, 100보다 작거나 같은 정수이다.
----
+---  
+
 ### 출력
 >  첫째 줄에 스타트 팀과 링크 팀의 능력치의 차이의 최솟값을 출력한다.
----
+---  
+
 ### 예제 입력 1
 ```
 4
@@ -60,7 +62,7 @@
 NC2개의 능력치 경우의 수가 나오는데 그 중에서 절반만 중복되지 않게 뽑으면 뽑은 경우들의 점수와 뽑히지 않은 경우의 능력치 합의 차이를 구하면 된다.
 - 이렇게 할 경우 서로 팀이 아닌 경우에도 능력치가 합쳐지는 경우가 생겨서 답이 맞지 않다.  
 
-> 새로운 방법 : 사람 N명 중에 절반을 뽑아서 팀이 되었을 때 능력치를 합한다.  
+> **새로운 방법** : 사람 N명 중에 절반을 뽑아서 팀이 되었을 때 능력치를 합한다.  
 만약 4명중에 두명을 뽑는다면 1번과 2번을 뽑는 경우와 2번과 1번을 뽑는 경우는 한 번만 구하면 되기 때문에 처음 뽑은 사람보다 숫자가 높은 사람만 뽑아나간다.  
 
 
