--- a/_posts/2020-01-23-피보나치수2.md
+++ b/_posts/2020-01-23-피보나치수2.md
@@ -6,14 +6,18 @@
 n=17일때 까지 피보나치 수를 써보면 다음과 같다.  
 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597  
 n이 주어졌을 때, n번째 피보나치 수를 구하는 프로그램을 작성하시오.  
+
 ---  
+
 
 ### 입력  
 > 첫째 줄에 n이 주어진다. n은 90보다 작거나 같은 자연수이다.  
+
 ---  
 
 ### 출력  
 > 첫째 줄에 n번째 피보나치 수를 출력한다.  
+
 ---  
 
 ### 입력 예제 1  
@@ -31,4 +35,35 @@ n이 주어졌을 때, n번째 피보나치 수를 구하는 프로그램을 작
 내가 생각한 방법은 두 가지이다.  
 >1. 재귀호출 대신 반복문을 이용하여 답을 구하는 방법  
 >2. n번째 피보나치 수를 한 배열의 n번째 index에 저장하고 다시 n번째 피보나치 수가 필요할 때는 계산하지 않고 저장되어 있는 값만 가져오는 방법  
+
+```
+n = int(input())
+
+storage = [-1 for i in range(500)]
+
+def fibo(n):
+    global storage
+
+    if storage[n] > 0:
+        return storage[n]
+    if n < 2:
+        storage[n] = n
+        return n
+    
+    result = fibo(n-1) + fibo(n-2)
+    storage[n] = result
+
+    return result
+
+ans = fibo(n)
+
+# print(storage[1:50])
+print(ans)
+```  
+
+> 맞았습니다!
+
+
+
+
  
