--- a/_posts/2020-01-24-괄호.md
+++ b/_posts/2020-01-24-괄호.md
@@ -39,4 +39,40 @@ NO
 
 ---  
 
+### 나의 코드
+> 스택을 이용하여 다음 문자가 '('일 때는 스택이 비어있거나 스택의 마지막 값이'('인 경우에는 '('를 스택에 넣어준다. 스택에 넣어주는 경우를 제외하면 문자열이 VPS가 아니다.  
+다음 문자가 ')'일 때는 스택이 비어있으면 VPS가 아니고, 마지막 문자가 '('일 때에만 스택을 pop해준다.  
 
+```  
+tc = int(input())
+
+for tc in range(tc):
+    user_input = input()
+
+    stack = []
+    isVPS = True
+
+    for char in user_input:
+        if char == '(':
+            if len(stack) == 0 or stack[-1] == '(':
+                stack.append(char)
+            else:
+                isVPS = False
+                break
+        elif char == ')':
+            if len(stack) == 0:
+                isVPS = False
+                break
+            elif stack[-1] == '(':
+                stack.pop()
+    
+    if not len(stack) == 0:
+        isVPS = False
+        
+    if isVPS:
+        print('YES')
+    else:
+        print('NO')
+```  
+
+> 맞았습니다!
