Add 바이러스 나의코드

--- a/_posts/2020-01-25-바이러스.md
+++ b/_posts/2020-01-25-바이러스.md
@@ -36,4 +36,42 @@
 4
 ```  
 
+### 나의 코드  
+> 1번 노드와 이어진 노드들을 탐색하면서 한번이라도 방문한 곳은 set내부에 추가해놓는다.  
+set의 길이를 출력한다.  
+
+```
+numOfcom = int(input()) # 100 이하
+
+numOfconnection = int(input())
+
+maps = [[] for i in range(numOfcom+1)]
+
+for i in range(numOfconnection):
+    com1, com2 = map(int,input().split())
+
+    maps[com1].append(com2)
+    maps[com2].append(com1)
+
+ans = set()
+stack = []
+visit = [False for i in range(numOfcom+1)]
+
+stack.append(1)
+visit[1] = True
+
+while not len(stack) == 0:
+    start = stack.pop()
+
+    for end in maps[start]:
+        if not visit[end]:
+            ans.add(end)
+            stack.append(end)
+            visit[end] = True
+        
+print(len(ans))
+```  
+
+> 맞았습니다!
+
 
