Add 토마토 나의 코드

--- a/_posts/2020-01-28-토마토.md
+++ b/_posts/2020-01-28-토마토.md
@@ -70,3 +70,88 @@
 
 ---  
 
+### 나의 코드  
+> 토마토가 있는 곳부터 bfs로 전체 맵을 탐색한다. 다음 탐색지점에 이미 탐색이 되어있고 걸린 시간이 현재 지점으로부터 갈 때보다 적다면 방문하지 않는다.  
+```
+from collections import deque
+
+move_X = [1, -1, 0, 0, 0, 0]
+move_Y = [0, 0, 1, -1, 0, 0]
+move_Z = [0, 0, 0, 0, 1, -1]
+
+
+def bfs(x,y,z, arr, visit):
+    visit[x][y][z] = True
+    que = deque()
+    que.append((x, y, z))
+
+    while len(que) is not 0:
+        x, y, z = que.popleft()
+
+        for i in range(6):
+            next_X = x+ move_X[i]
+            next_Y = y+move_Y[i]
+            next_Z = z+move_Z[i]
+
+            if next_X >= H or next_Y>=N or next_Z>=M or next_X <0 or next_Y <0 or next_Z <0:
+                continue
+            if visit[next_X][next_Y][next_Z]:
+                continue
+            if arr[next_X][next_Y][next_Z] == -1:
+                continue
+            if arr[next_X][next_Y][next_Z] is 0 or  arr[next_X][next_Y][next_Z] > arr[x][y][z]+1:
+                arr[next_X][next_Y][next_Z] = arr[x][y][z]+1
+                que.append((next_X, next_Y, next_Z))
+                visit[next_X][next_Y][next_Z] = True
+    return arr
+
+M, N, H = map(int, input().split())
+
+maps = []
+
+for i in range(H):
+    tmp = []
+    for j in range(N):
+        tmp.append(list(map(int, input().split())))
+    maps.append(tmp)
+
+visit = [[[False for i in range(M)] for j in range(N)] for k in range(H)]
+tomato = []
+
+for i in range(M):
+    for j in range(N):
+        for k in range(H):
+            if maps[k][j][i] == 1:
+                tomato.append((k,j,i))
+
+for i in range(len(tomato)):
+    visit = [[[False for i in range(M)] for j in range(N)] for k in range(H)]
+    maps = bfs(tomato[i][0], tomato[i][1], tomato[i][2], maps, visit)
+
+max = 0
+br = False
+
+for i in range(H):
+    if br:
+        break
+    for j in range(N):
+        if br:
+            break
+        for k in range(M):
+            if maps[i][j][k] == 0:
+                br = True
+                max = -1
+                break
+            if maps[i][j][k] > max:
+                max = maps[i][j][k]
+
+if max == 1:
+    print(0)
+elif max == -1:
+    print(max)
+else:
+    print(max-1)
+```
+
+> 시간 초과...
+
