--- a/_posts/2020-01-28-토마토.md
+++ b/_posts/2020-01-28-토마토.md
@@ -153,5 +153,85 @@ else:
     print(max-1)
 ```
 
-> 시간 초과...
+> 시간 초과...  
+
+### 수정된코드
+> 처음에는 토마토가 익어있는 곳을 시작점으로 전부 BFS탐색을 했는데, 처음 큐에 토마토가 익어있는 곳을 모두 넣어두고 BFS를 한번 돌리는 것으로 수정했다.
+```
+import sys
+from collections import deque
+
+move_X = [1, -1, 0, 0, 0, 0]
+move_Y = [0, 0, 1, -1, 0, 0]
+move_Z = [0, 0, 0, 0, 1, -1]
+
+M,N,H = map(int,sys.stdin.readline().split())
+
+maps = []
+
+for i in range(H):
+    tmp = []
+    for j in range(N):
+        tmp.append(list(map(int, sys.stdin.readline().split())))
+    maps.append(tmp)
+
+que = deque()
+
+for i in range(M):
+    for j in range(N):
+        for k in range(H):
+            if maps[k][j][i] == 1:
+                que.append((k,j,i))
+
+def bfs(arr, que):
+
+    while que:
+        x, y, z = que.popleft()
+
+        for i in range(6):
+            next_X = x+ move_X[i]
+            next_Y = y+move_Y[i]
+            next_Z = z+move_Z[i]
+
+            if next_X >= H or next_Y>=N or next_Z>=M or next_X <0 or next_Y <0 or next_Z <0:
+                continue
+            if arr[next_X][next_Y][next_Z] == -1:
+                continue
+
+            if arr[next_X][next_Y][next_Z] is 0 or arr[next_X][next_Y][next_Z] > arr[x][y][z]+1:
+                arr[next_X][next_Y][next_Z] = arr[x][y][z]+1
+                que.append((next_X, next_Y, next_Z))
+
+    return arr
+
+maps = bfs(maps, que)
+
+max = 0
+br = False
+
+for i in range(H):
+    if br:
+        break
+    for j in range(N):
+        if br:
+            break
+        for k in range(M):
+            if maps[i][j][k] == 0:
+                br = True
+                max = -1
+                break
+            if maps[i][j][k] > max:
+                max = maps[i][j][k]
+
+if max == 1:
+    print(0)
+elif max == -1:
+    print(max)
+else:
+    print(max-1)
+```
+
+> 맞았습니다!
+
+> 출발 지점이 여러 개인 문제를 풀 때 모든 출발 지점에서 BFS탐색을 하는 것으로 항상 코드를 짜 왔는데, 출발점을 모두 큐에 넣어두고 BFS를 한 번 돌리는 방법이 시간적으로 유리하다. 
 
