Add 직사각형 나의 코드

--- a/_posts/2020-01-29-직사각형 네 개의 합집합의 면적 구하기.md
+++ b/_posts/2020-01-29-직사각형 네 개의 합집합의 면적 구하기.md
@@ -31,5 +31,57 @@
 
 ---  
 
+### 나의 코드
+> 100 x 100 크기의 맵에 직사각형마다 포함되는 곳에 +1을 해준다.  
+마지막에 전체 맵을 돌면서 맵에 저장되어 있는 값이 1이상이면 카운트한다.  
+
+```
+loc = []
+
+low_x = low_y = 1000
+high_x = high_y = 0
+
+for i in range(4):
+    x1,y1,x2,y2 = map(int,input().split())
+    if x1 < low_x:
+        low_x = x1
+    if y1 < low_y:
+        low_y = y1
+    if x2 > high_x:
+        high_x = x2
+    if y2 > high_y:
+        high_y = y2
+    loc.append([x1,y1,x2,y2])
+
+for i in range(4):
+    for j in range(4):
+        if j&1 == 1:
+            loc[i][j] -= low_y
+        else:
+            loc[i][j] -= low_x
+
+maps = [[0 for _ in range(high_y)] for _ in range(high_x)]
+
+for i in range(4):
+    x1 = loc[i][0]
+    y1 = loc[i][1]
+    x2 = loc[i][2]
+    y2 = loc[i][3]
+
+    for j in range(x1,x2):
+        for k in range(y1,y2):
+            maps[j][k] += 1
+
+cnt = 0
+for i in range(len(maps)):
+    for j in range(len(maps[0])):
+        if maps[i][j] > 0:
+            cnt += 1
+
+print(cnt)
+```
+
+> 맞았습니다 !
+
 
 
