Add 수이어가기 나의 코드

--- a/_posts/2020-01-29-수이어가기.md
+++ b/_posts/2020-01-29-수이어가기.md
@@ -38,3 +38,36 @@
 
 ---
 
+### 나의 코드
+> 입력받은 수의 절반 미만의 숫자를 두 번째 숫자로 정하면 모두 3개의 숫자밖에 만들지 못한다. 입력받은 수의 절반부터 입력받은 수까지 반복하면서 숫자 갯수를 찾는다.  
+>- [예외] 입력받은 수가 1일 경우 두 번째 숫자를 1로 정하는 것이 최대 갯수의 숫자를 만들 수 있다.  
+
+```
+num = int(input())
+
+max = 0
+ans = []
+for i in range(num//2,num+1):
+    if i == 0:
+        continue
+    x = num
+    y = i
+    z = 100
+    result = [num,i]
+    cnt = 1
+    while z >= 0:
+        z = x - y
+        result.append(z)
+        x = y
+        y = z
+        cnt += 1
+
+    if cnt > max:
+        ans = result
+        max = cnt
+
+print(max)
+print(*ans[:-1])
+```
+> 맞았습니다!
+
