Add 스위치 켜고끄기 나의 코드

--- a/_posts/2020-01-29-스위치켜고끄기.md
+++ b/_posts/2020-01-29-스위치켜고끄기.md
@@ -56,3 +56,63 @@
 
 ---
 
+### 나의 코드
+> 문제에 제시되어 있는 대로 남학생의 경우 스위치를 바꾸는 함수와 여학생의 경우 스위치를 바꾸는 함수를 생성하고 실행하였다.  
+20개씩 끊어서 출력하는 것 때문에 몇번 틀렸었다.  
+
+```
+numOfswitch = int(input())
+
+switch = list(map(int,input().split()))
+
+numOfstu = int(input())
+Info = []
+for _ in range(numOfstu):
+    Info.append(list(map(int,input().split())))
+
+def male(n,switch):
+    idx = n-1
+    while len(switch) > idx:
+        switch[idx] = (switch[idx]+1)%2
+        idx += n
+    return switch
+
+def female(n,switch):
+    idx = n-1
+    switch[idx] = (switch[idx]+1)%2
+    forward = idx
+    backward = idx
+    while True:
+        if forward <= 0:
+            break
+        if backward >= len(switch)-1:
+            break
+
+        forward -= 1
+        backward += 1
+        if not switch[forward] == switch[backward]:
+            break
+
+        switch[forward] = (switch[forward] + 1) % 2
+        switch[backward] = (switch[backward] + 1) % 2
+
+    return switch
+
+for i in range(len(Info)):
+    stu = Info[i]
+    if stu[0] == 1:
+        switch = male(stu[1],switch)
+    else:
+        switch = female(stu[1],switch)
+
+if len(switch) <= 20:
+    print(*switch)
+else:
+    for i in range(len(switch)//20):
+        print(*switch[(20*i):(20*(i+1))])
+    if not len(switch)%20 == 0:
+        print(*switch[20*(len(switch)//20):])
+```
+
+> 맞았습니다!
+
