Add 종이자르기 나의 코드

--- a/_posts/2020-01-29-종이자르기.md
+++ b/_posts/2020-01-29-종이자르기.md
@@ -36,3 +36,43 @@
 
 ---
 
+### 나의 코드
+> 자르는 선을 입력받고, 자르는 선들의 차이중에 최대값을 찾는다.
+찾은 가로 최대값과 세로 최대값을 곱하여 출력한다.  
+
+```
+w, h = map(int,input().split())
+
+slice = int(input())
+
+w_slice = [0]
+h_slice = [0]
+
+for _ in range(slice):
+    s , loc = map(int,input().split())
+
+    if s == 1:
+        w_slice.append(loc)
+    else:
+        h_slice.append(loc)
+w_slice.append(w)
+h_slice.append(h)
+
+w_slice.sort()
+h_slice.sort()
+
+w_max = 0
+h_max = 0
+
+for i in range(len(w_slice)-1):
+    if w_slice[i+1] - w_slice[i] > w_max:
+        w_max = w_slice[i+1] - w_slice[i]
+
+for i in range(len(h_slice)-1):
+    if h_slice[i+1] - h_slice[i] > h_max:
+        h_max = h_slice[i+1] - h_slice[i]
+
+print(w_max * h_max)
+```
+
+> 맞았습니다!
