--- a/_posts/2020-01-30-주사위쌓기.md
+++ b/_posts/2020-01-30-주사위쌓기.md
@@ -35,3 +35,72 @@
 29
 ```
 
+---
+
+### 나의 코드
+> 주사위를 맞대는 윗면과 아랫면의 숫자가 6 또는 5인 경우는 그 주사위의 옆면의 최댓값은 4이다. 한 면이 6이고 나머지 한 면이 5일 경우는 옆면의 최댓값이 5이고, 앞의 경우를 제외하고는 모두 6이 옆면의 최댓값이다.  
+
+```
+# (0,5), (1,3), (2,4)
+
+dice = int(input())
+
+dices = []
+
+for _ in range(dice):
+    dices.append(list(map(int,input().split())))
+
+if dice == 1:
+    print(max(dices[0]))
+    exit(0)
+
+def updown(i):
+    if i == 0:
+        return 5
+    elif i == 1:
+        return 3
+    elif i == 2:
+        return 4
+    elif i == 3:
+        return 1
+    elif i == 4:
+        return 2
+    elif i == 5:
+        return 0
+
+max = 0
+
+for i in range(len(dices[0])):
+    tmp_max = 0
+    start_idx = i
+    next_idx = updown(i)
+    start_num = dices[0][start_idx]
+    next_num = dices[0][next_idx]
+    if start_num == 6 or next_num == 6:
+        if start_num == 5 or next_num == 5:
+            tmp_max += 4
+        else:
+            tmp_max += 5
+    else:
+        tmp_max += 6
+
+    for j in range(1,len(dices)):
+        start_idx = dices[j].index(next_num)
+        next_idx = updown(start_idx)
+        start_num = dices[j][start_idx]
+        next_num = dices[j][next_idx]
+        if start_num == 6 or next_num == 6:
+            if start_num == 5 or next_num == 5:
+                tmp_max += 4
+            else:
+                tmp_max += 5
+        else:
+            tmp_max += 6
+
+    if tmp_max > max:
+        max = tmp_max
+
+print(max)
+```
+
+> 맞았습니다!
