Add 창고다각형 나의코드

--- a/_posts/2020-01-30-창고다각형.md
+++ b/_posts/2020-01-30-창고다각형.md
@@ -45,3 +45,49 @@
 ```
 98
 ```
+
+### 나의 코드
+> 가장 긴 기둥을 기준으로 양쪽에서 가장 긴 기둥을 찾아 연결한다. 이 과정을 반복한다.
+
+```
+column = int(input())
+
+graph = [0 for _ in range(1001)]
+
+low_x = 1001
+high_x = 0
+max_idx = 0
+max_len = 0
+for _ in range(column):
+    l, h = map(int,input().split())
+    if l < low_x:
+        low_x = l
+    if l > high_x:
+        high_x = l
+    if h > max_len:
+        max_len = h
+        max_idx = l
+    graph[l] = h
+
+stack = []
+ans = 0
+for i in range(low_x,max_idx):
+    if not stack:
+        stack.append(graph[i])
+    elif stack[-1] < graph[i]:
+        stack.append(graph[i])
+    ans += stack[-1]
+
+stack.clear()
+
+for i in range(high_x,max_idx,-1):
+    if not stack:
+        stack.append(graph[i])
+    elif stack[-1] < graph[i]:
+        stack.append(graph[i])
+    ans += stack[-1]
+
+print(ans+max_len)
+```
+
+> 맞았습니다!
