Add 수열 나의 코드

--- a/_posts/2020-01-30-수열.md
+++ b/_posts/2020-01-30-수열.md
@@ -45,3 +45,27 @@
 
 ---
 
+### 나의 코드
+> 처음부터 끝까지 K개의 숫자의 합을 계속 구했더니 시간초과가 났다.  
+그래서 처음에 K개의 숫자의 합을 구하고 난 후에 그 다음부터는 가장 처음 숫자를 빼고 그 다음에 올 숫자만 더하는 방식으로 풀었다.  
+
+```
+n, k = map(int,input().split())
+
+temper = list(map(int,input().split()))
+
+s = sum(temper[0:k])
+max = s
+
+for i in range(n-k):
+    s -= temper[i]
+    s += temper[i+k]
+
+    if s > max:
+        max = s
+
+print(max)
+```
+
+> 맞았습니다!
+
