Add 빙고 나의 코드

--- a/_posts/2020-01-30-빙고.md
+++ b/_posts/2020-01-30-빙고.md
@@ -31,3 +31,76 @@
 > 첫째 줄에 사회자가 몇 번째 수를 부른 후 철수가 "빙고"를 외치게 되는지 출력한다.  
 
 ---
+
+### 나의 코드
+> 25칸을 탐색하는 것을 최대 25번 반복하면 되기 때문에 시간은 충분할 것이라 판단하고, 완전 탐색으로 해결했다.
+
+```
+bingos = []
+
+for _ in range(5):
+    bingos += list(map(int,input().split()))
+
+check = [0 for _ in range(len(bingos))]
+
+def bingo_sero(check):
+    bin = 0
+    for i in range(5):
+        if check[i] == 0:
+            continue
+        if check[i+5] == 0:
+            continue
+        if check[i+10] == 0:
+            continue
+        if check[i+15] == 0:
+            continue
+        if check[i+20] == 0:
+            continue
+        bin += 1
+    return bin
+
+def bingo_garo(check):
+    bin = 0
+    for i in range(0,24,5):
+        if check[i] == 0:
+            continue
+        if check[i + 1] == 0:
+            continue
+        if check[i + 2] == 0:
+            continue
+        if check[i + 3] == 0:
+            continue
+        if check[i + 4] == 0:
+            continue
+        bin += 1
+    return bin
+
+def bingo_daegak(check):
+    bin = 0
+    if check[0] == 1 and check[6] == 1 and check[12] == 1 and check[18] == 1 and check[24] == 1:
+        bin += 1
+
+    if check[4] == 1 and check[8] == 1 and check[12] == 1 and check[16] == 1 and check[20] == 1:
+        bin += 1
+
+    return bin
+
+cnt = 0
+br = False
+while True:
+    if br:
+        break
+    b = list(map(int,input().split()))
+
+    for i in range(len(b)):
+        cnt += 1
+        idx = bingos.index(b[i])
+        check[idx] = 1
+        if bingo_daegak(check)+bingo_garo(check)+bingo_sero(check) >= 3:
+            br = True
+            break
+
+print(cnt)
+```
+
+> 맞았습니다!
