--- a/_posts/2020-01-30-참외밭.md
+++ b/_posts/2020-01-30-참외밭.md
@@ -42,3 +42,68 @@
 
 ---
 
+### 나의 코드
+> 가로에서 가장 긴 변을 이동하기 직전의 이동거리와 가장 긴 변을 이동한 후의 이동거리를 빼면 전체 직사각형에서 빼야하는 직사각형의 세로 길이가 나온다.  
+마찬가지로 세로에서 가장 긴 변을 이용하여 빼야하는 직사각형의 가로 길이를 찾는다.  
+가장 긴 가로 변과 가장 긴 세로 변을 이용하여 만든 직사각형에서 전 단계에서 찾은 빼야하는 직사각형의 넓이를 빼주면 총 참외밭의 넓이가 된다.
+
+```
+K = int(input())
+
+garo_max = 0
+sero_max = 0
+
+garo_max_idx = 0
+sero_max_idx = 0
+
+move = []
+
+for i in range(6):
+    info = list(map(int,input().split()))
+    if info[0] == 1 or info[0] == 2:
+        if info[1] > garo_max:
+            garo_max = info[1]
+            garo_max_idx = i
+    else:
+        if info[1] > sero_max:
+            sero_max = info[1]
+            sero_max_idx = i
+    move.append(info)
+
+Area = garo_max*sero_max
+
+subgaro = 0
+subsero = 0
+
+if garo_max_idx == 0:
+    idx1 = 1
+    idx2 = len(move)-1
+    subsero = abs(move[idx1][1]-move[idx2][1])
+elif garo_max_idx == len(move)-1:
+    idx1 = 0
+    idx2 = len(move)-2
+    subsero = abs(move[idx1][1] - move[idx2][1])
+else:
+    subsero = abs(move[garo_max_idx-1][1]-move[garo_max_idx+1][1])
+
+if sero_max_idx == 0:
+    idx1 = 1
+    idx2 = len(move)-1
+    subgaro = abs(move[idx1][1]-move[idx2][1])
+elif sero_max_idx == len(move)-1:
+    idx1 = 0
+    idx2 = len(move)-2
+    subgaro = abs(move[idx1][1] - move[idx2][1])
+else:
+    subgaro = abs(move[sero_max_idx-1][1]-move[sero_max_idx+1][1])
+
+# print(move)
+# print(garo_max,garo_max_idx)
+# print(sero_max,sero_max_idx)
+# print(Area)
+# print(subsero,subgaro)
+print((Area - subgaro*subsero)*K)
+```
+
+> 맞았습니다!
+
