Add 직사각형 나의 코드

--- a/_posts/2020-01-30-직사각형.md
+++ b/_posts/2020-01-30-직사각형.md
@@ -56,3 +56,59 @@ b
 
 ---
 
+### 나의 코드
+> 가로, 세로 범위가 서로 겹치는지 구한다.  
+세 가지 경우가 나오는데 범위가 선분으로 겹치는 경우, 점으로 겹치는 경우, 겹치지 않는 경우이다.
+
+- 가로 세로 모두 선분으로 겹치면 a를 출력
+- 가로 세로 둘중에 하나가 선분으로 겹치고 나머지 하나는 점으로 겹치는 경우 b를 출력
+- 가로 세로 모두 점으로 겹치면 c를 출력
+- 나머지 경우는 모두 d를 출력
+
+```
+for i in range(4):
+    r = list(map(int,input().split()))
+    r1x1, r1x2, r2x1, r2x2 = r[0], r[2], r[4], r[6]
+    r1y1, r1y2, r2y1, r2y2 = r[1], r[3], r[5], r[7]
+
+    # 0: 점, 1: 선, -1: 안만남
+    garo_check = -1
+    sero_check = -1
+
+    if r1x1 == r2x2 or r1x2 == r2x1:
+        garo_check = 0
+    elif r1x1<= r2x1 and r1x2 > r2x1:
+        garo_check = 1
+    elif r1x1 <= r2x2 and r1x2 > r2x2:
+        garo_check = 1
+    elif r2x1 <= r1x1 and r2x2 >= r1x2:
+        garo_check = 1
+
+    if r1y1 == r2y2 or r1y2 == r2y1:
+        sero_check = 0
+    elif r1y1 <= r2y1 and r1y2 > r2y1:
+        sero_check = 1
+    elif r1y1 <= r2y2 and r1y2 > r2y2:
+        sero_check = 1
+    elif r2y1 <= r1y1 and r2y2 >= r1y2:
+        sero_check = 1
+    # print(garo_check, sero_check)
+    if garo_check == 0:
+        if sero_check == 0:
+            print('c')
+        elif sero_check == 1:
+            print('b')
+        else:
+            print('d')
+    elif garo_check == 1:
+        if sero_check == 0:
+            print('b')
+        elif sero_check == 1:
+            print('a')
+        else:
+            print('d')
+    else:
+        print('d')
+```
+
+> 맞았습니다!
