Add 자리배정 나의 코드

--- a/_posts/2020-01-30-자리배정.md
+++ b/_posts/2020-01-30-자리배정.md
@@ -41,3 +41,70 @@
 
 ---
 
+
+### 나의 코드
+> (1,1)부터 시작해서 탐색하여 가다가 목표 대기 숫자가 나오면 그 지점을 출력한다. (BFS, DFS 응용)
+
+```
+from collections import deque
+
+c, r = map(int,input().split())
+
+wait = int(input())
+
+move_x = (0,1,0,-1)
+move_y = (1,0,-1,0)
+
+graph = [[0 for _ in range(r)] for _ in range(c)]
+visit = [[False for _ in range(r)] for _ in range(c)]
+# print(graph)
+
+def go_to_first(idx):
+    if idx == 3:
+        return 0
+
+def travel():
+    graph[0][0] = 1
+
+    que = deque()
+    que.append([0,0])
+    visit[0][0] = True
+    m_i = 0
+    while que:
+        x,y = que.popleft()
+        # print(x,y)
+        next_x = x + move_x[m_i]
+        next_y = y + move_y[m_i]
+
+        if next_x >= c or next_x < 0 or next_y >= r or next_y < 0:
+            que.append([x,y])
+            m_i = (m_i+1)%4
+            continue
+
+        if visit[next_x][next_y]:
+            que.append([x,y])
+            m_i = (m_i+1)%4
+            continue
+
+        que.append([next_x,next_y])
+        visit[next_x][next_y] = True
+        graph[next_x][next_y] = graph[x][y]+1
+        if graph[next_x][next_y] == r*c:
+            print(next_x+1,next_y+1)
+            break
+        if graph[next_x][next_y] == wait:
+            print(next_x+1,next_y+1)
+            break
+if wait == 1:
+    print(1,1)
+    exit(0)
+elif wait > r*c:
+    print(0)
+    exit(0)
+travel()
+# print(graph)
+```
+
+> 맞았습니다!
+
+
