--- a/_posts/2020-01-30-개미.md
+++ b/_posts/2020-01-30-개미.md
@@ -36,3 +36,91 @@
 
 ---
 
+### code
+```
+w, h = map(int,input().split())
+x, y = map(int,input().split())
+t = int(input())
+
+fmove_x = 1
+fmove_y = 1
+
+pmove_x = 1
+pmove_y = 1
+
+gmove_x = 1
+gmove_y = 1
+
+def move_change(move_x,move_y,x,y):
+    global gmove_x
+    global gmove_y
+    if (x == 0 and y == 0) or (x == 0 and y == h) or (x == w and y == 0) or (x == w and y == h):
+        gmove_x = -(move_x)
+        gmove_y = -(move_y)
+        return
+    if x == 0 or x == w:
+        gmove_x = -(move_x)
+        return
+    if y == 0 or y == h:
+        gmove_y = -(move_y)
+        return
+
+repeat_time = 0
+time = 0
+cnt = 0
+first = []
+while time < t:
+    if gmove_x > 0 and gmove_y > 0:
+        # print(1)
+        # print(w-x, h-y)
+        take = min(w-x, h-y)
+        x += take
+        y += take
+        time += take
+        pmove_x, pmove_y = gmove_x, gmove_y
+        # print(x,y)
+        move_change(gmove_x,gmove_y,x,y)
+    elif gmove_x < 0 and gmove_y > 0:
+        # print(2)
+        take = min(x-0,h-y)
+        x -= take
+        y += take
+        time += take
+        pmove_x, pmove_y = gmove_x, gmove_y
+        # print(x, y)
+        move_change(gmove_x, gmove_y, x, y)
+    elif gmove_x <0 and gmove_y < 0:
+        # print(3)
+        take = min(x-0,y-0)
+        x -= take
+        y -= take
+        time += take
+        pmove_x, pmove_y = gmove_x, gmove_y
+        # print(x, y)
+        move_change(gmove_x, gmove_y, x, y)
+    elif gmove_x > 0 and gmove_y < 0:
+        # print(4)
+        take = min(w-x,y-0)
+        x += take
+        y -= take
+        time += take
+        pmove_x, pmove_y = gmove_x, gmove_y
+        # print(x, y)
+        move_change(gmove_x, gmove_y, x, y)
+
+    if cnt == 0:
+        first.append([x,y])
+        fmove_x = gmove_x
+        fmove_y = gmove_y
+        cnt+= 1
+    elif first[0][0] == x and first[0][1] == y and gmove_x == fmove_x and gmove_x == fmove_y:
+        print(1)
+        repeat_time = time
+print(first)
+# print(x,y,time)
+print(repeat_time)
+x = x - (time-t)*pmove_x
+y = y - (time-t)*pmove_y
+
+print(x,y)
+```
