Add 개미 나의 코드

--- a/_posts/2020-01-30-개미.md
+++ b/_posts/2020-01-30-개미.md
@@ -37,7 +37,25 @@
 ---
 
 ### code
+1. 개미가 돌다보면 시작점으로 다시 오는 경우가 무조건 생긴다고 판단
+2. 한바퀴 도는 데에 걸리는 시간을 구한 뒤에 총 시간을 한 바퀴 도는 시간으로 나눈 나머지를 구함  
+3. 시작점에서 2번에서 구한 나머지만큼의 시간을 진행한다.  
+
+--> 결과는 시간초과  
+----> 한 칸 한 칸 진행하다보니 처음 시작점까지 다시 오는데에 걸리는 시간이 오래 걸리는 것으로 생각했다.
+
+---
+
+### new code 1
+1. 개미가 진로를 변경하기 전까지 한 칸씩 진행하지 않고 한 번에 이동한다.
+2. 처음 코드와 동일하게 한 바퀴를 도는 시간을 구하고 문제를 풀려고 했다.
+ 
+--> 마찬가지로 시간초과
+-----> 이 방법으로는 더 이상 최적화가 힘들거 같다.
 ```
+import time as timep
+start = timep.time()
+
 w, h = map(int,input().split())
 x, y = map(int,input().split())
 t = int(input())
@@ -65,11 +83,18 @@ def move_change(move_x,move_y,x,y):
         gmove_y = -(move_y)
         return
 
+first_time = 0
 repeat_time = 0
 time = 0
 cnt = 0
 first = []
 while time < t:
+    # print('t:',t, repeat_time)
+    # print(first)
+    if not repeat_time == 0 and repeat_time < t:
+        t = t%repeat_time
+        time = 0
+
     if gmove_x > 0 and gmove_y > 0:
         # print(1)
         # print(w-x, h-y)
@@ -112,15 +137,54 @@ while time < t:
         first.append([x,y])
         fmove_x = gmove_x
         fmove_y = gmove_y
+        first_time= time
         cnt+= 1
-    elif first[0][0] == x and first[0][1] == y and gmove_x == fmove_x and gmove_x == fmove_y:
-        print(1)
-        repeat_time = time
-print(first)
+    elif first[0][0] == x and first[0][1] == y and gmove_x == fmove_x and gmove_y == fmove_y:
+        # print(1)
+        repeat_time = time-first_time
+
+# print(first)
 # print(x,y,time)
-print(repeat_time)
+print(t)
+# print(repeat_time)
 x = x - (time-t)*pmove_x
 y = y - (time-t)*pmove_y
+
+print(x,y)
+print('time:', timep.time()-start)
+```
+
+### new code 2
+> x, y를 분리하여 생각하기로 하였다. x 좌표는 어차피 좌,우로만 움직이고, y 좌표는 상,하로만 움직이기 때문에 따로따로 계산하기로 했다.  
+그럼 그 따로를 어떻게 계산하느냐....  
+x 좌표는 가로길이x2 만큼의 시간만에 제자리로 돌아오고, y 좌표는 세로길이x2 만큼의 시간만에 제자리로 돌아온다. 시간을 각각 가로길이x2, 세로길이x2로 나눈 나머지를 가지고 움직이기로 하였다.  
+
+--> 드디어 맞았다!!! 거의 하루동안 고민을 했는데 이렇게 허무하게 문제가 풀릴 줄은 몰랐다... 문제를 처음에 너무 직관적으로 받아들이고 x,y 좌표를 분리하는 생각을 미리 못했다... 처음부터 방법들을 여러 가지 생각을 해야겠다.
+
+```
+w, h = map(int,input().split())
+x, y = map(int,input().split())
+t = int(input())
+
+move_x = t%(2*w)
+move_y = t%(2*h)
+
+xx = 1
+yy = 1
+
+for i in range(move_x):
+    if x == 0:
+        xx = -xx
+    elif x == w:
+        xx = -xx
+    x += xx
+
+for i in range(move_y):
+    if y == 0:
+        yy = -yy
+    elif y == h:
+        yy = -yy
+    y += yy
 
 print(x,y)
 ```
