Add 색종이 문제

--- a/_posts/2020-01-31-색종이.md
+++ b/_posts/2020-01-31-색종이.md
@@ -45,3 +45,42 @@
 
 ---
 
+### 나의 코드
+> 처음 사각형의 넓이에는 1을 넣고, 두번째는 2 이런 방식으로 반복해서 덮어쓴다.
+마지막에 그래프 내의 숫자를 세어 출력한다.
+
+```
+N = int(input())
+
+high_x = 0
+high_y = 0
+low_x = 1000
+low_y = 1000
+
+rec = []
+for _ in range(N):
+    x, y ,w, h = map(int,input().split())
+    rec.append([x,y,w,h])
+    if x + w > high_x:
+        high_x = x + w
+
+    if y + h > high_y:
+        high_y = y + h
+
+graph = [[0 for _ in range(high_y)] for _ in range(high_x)]
+
+for cnt in range(len(rec)):
+    for i in range(rec[cnt][0],rec[cnt][0]+rec[cnt][2]):
+        for j in range(rec[cnt][1],rec[cnt][1]+rec[cnt][3]):
+            graph[i][j] = cnt+1
+
+for cnt in range(len(rec)):
+    ans = 0
+    for i in range(len(graph)):
+        for j in range(len(graph[i])):
+            if graph[i][j] == cnt+1:
+                ans+=1
+    print(ans)
+```
+
+> 맞았습니다!
