Add 방배정 나의 코드

--- a/_posts/2020-02-01-방배정.md
+++ b/_posts/2020-02-01-방배정.md
@@ -60,3 +60,33 @@
 ```
 
 ---
+
+### 나의 코드
+> 학년별, 성별대로 학생 수를 세고 (학생 수%방에 배정 가능한 최대 인원수)가 0이면 (학생 수/방에 배정 가능한 최대 인원수)만큼의 방이 필요하고 (학생 수%방에 배정 가능한 최대 인원수)가 0이 아니라면 (학생 수/방에 배정 가능한 최대 인원수)+1만큼의 방이 필요하다.
+
+```
+N, K = map(int,input().split())
+
+students = [[0,0] for _ in range(6)]
+
+for _ in range(N):
+    gender, grade = map(int,input().split())
+
+    students[grade-1][gender] += 1
+
+cnt = 0
+
+for student in students:
+    for stu_num in student:
+        if stu_num == 0:
+            continue
+        if stu_num%K == 0:
+            cnt += stu_num//K
+        else:
+            cnt += stu_num//K+1
+
+print(cnt)
+```
+
+> 맞았습니다!
+
