Add 딱지놀이 나의 코드

--- a/_posts/2020-02-01-딱지놀이.md
+++ b/_posts/2020-02-01-딱지놀이.md
@@ -78,3 +78,42 @@ A
 
 ---
 
+### 나의 코드
+> 각 라운드마다 받는 카드 숫자들을 내림차순으로 정렬한다. 그 후에 A, B 숫자를 비교해서 A의 숫자가 크면 A가 승, B의 숫자가 크면 B의 승리이다. 끝까지 승자가 가려지지 않고 두 카드의 그림의 갯수가 똑같으면 비긴 것이다. 끝까지 승자가 가려지지 않은 경우에 두 카드의 그림의 갯수가 다르면 도형의 갯수가 많은 쪽이 승리이다.  
+
+```
+round = int(input())
+
+for _ in range(round):
+    A = list(map(int,input().split()))
+    A = A[1:]
+    B = list(map(int,input().split()))
+    B = B[1:]
+
+    A.sort(reverse = True)
+    B.sort(reverse = True)
+
+    winner = 'D'
+    it = len(A)
+    if len(A) > len(B):
+        winner = 'A'
+        it = len(B)
+    elif len(A) < len(B):
+        winner = 'B'
+        it = len(A)
+
+    for i in range(it):
+        # print(A[i],B[i])
+        if A[i] == B[i]:
+            continue
+
+        if A[i] > B[i]:
+            winner = 'A'
+            break
+        else:
+            winner = 'B'
+            break
+    print(winner)
+```
+
+
