Add 색종이2  나의 코드

--- a/_posts/2020-02-01-색종이2.md
+++ b/_posts/2020-02-01-색종이2.md
@@ -33,4 +33,30 @@
 
 ---
 
+### 나의 코드
+> 색종이가 차지하는 넓이를 모두 그래프에 표기한다. 그래프를 모두 탐색하면서 그래프에 색종이가 덮는지를 파악한다.
+
+```
+graph = [[0 for _ in range(100)] for _ in range(100)]
+
+N = int(input())
+
+for _ in range(N):
+    x, y = map(int,input().split())
+    for i in range(x,x+10):
+        for j in range(y,y+10):
+            graph[i][j] += 1
+
+cnt = 0
+
+for row in graph:
+    for col in row:
+        if col > 0:
+            cnt += 1
+
+print(cnt)
+```
+
+
+
 
