Add 경비원 나의 코드

--- a/_posts/2020-02-02-경비원.md
+++ b/_posts/2020-02-02-경비원.md
@@ -38,3 +38,62 @@
 ```
 
 ---
+
+### 나의 코드
+> 가로, 세로의 길이가 최대 100이고 상점의 갯수가 100개 이하이기 때문에 시간의 문제는 없을 것이다.  
+북서쪽의 꼭짓점을 (0,0)으로 하는 2차원 그래프로 생각하고 구하면 편할 것 같다.  
+
+```
+w, h = map(int,input().split())
+
+# 1,2-3,4 / 3,4-1,2
+
+numOfstore = int(input())
+
+store = []
+
+for _ in range(numOfstore):
+    dir, dist = map(int,input().split())
+    if dir == 1:
+        store.append((1,dist,0))
+    elif dir == 3:
+        store.append((3,0,dist))
+    elif dir == 4:
+        store.append((4,w,dist))
+    else:
+        store.append((2,dist,h))
+# print(store)
+dir, dist = map(int,input().split())
+tmp = [1,2,3,4]
+loc = []
+if dir == 1:
+    loc = [dist,0]
+    tmp.remove(2)
+elif dir == 3:
+    loc = [0,dist]
+    tmp.remove(4)
+elif dir == 4:
+    loc = [w,dist]
+    tmp.remove(3)
+else:
+    loc = [dist,h]
+    tmp.remove(1)
+# print(tmp)
+total_dist = 0
+
+for st in store:
+    # print(total_dist)
+    # print(st[0])
+    # print(st[1],st[2])
+    # print(loc[0],loc[1])
+    if st[0] in tmp:
+        total_dist += abs(st[1] - loc[0]) + abs(st[2] - loc[1])
+        continue
+    if st[0] == 1 or st[0] == 2:
+        total_dist += min(st[1]+loc[0]+h, 2*w-(st[1]+loc[0])+h)
+    else:
+        total_dist += min(st[2]+loc[1]+w, 2*h-(st[2]+loc[1])+w)
+
+print(total_dist)
+```
+
