--- a/_posts/2020-02-02-수열.md
+++ b/_posts/2020-02-02-수열.md
@@ -28,3 +28,108 @@
 ```
 
 ---
+
+### 나의 코드
+> 수열을 처음부터 탐색해 나가면서 숫자가 증가할 때는 증가할 때까지 탐색하고 그 다음 숫자부터는 감소할 때까지 탐색하는 것을 반복한다.
+
+```
+N = int(input())
+if N <= 2:
+    print(N)
+    exit(0)
+nums = list(map(int,input().split()))
+
+same_num = 1
+length = 1
+max = 0
+check = 1
+if nums[1] - nums[0] < 0:
+    check = -1
+
+for i in range(len(nums)):
+    if i+1 == len(nums):
+        # print(length)
+        if length > max:
+            max = length
+        break
+    if check > 0:
+        if nums[i+1] > nums[i]:
+            length += 1
+            same_num = 1
+        elif nums[i+1] == nums[i]:
+            length += 1
+            same_num += 1
+        else:
+            check = -check
+            # print('1',length)
+            # print(same_num)
+            if length > max:
+                max = length
+                length = same_num+1
+                same_num = 1
+    else:
+        if nums[i+1] < nums[i]:
+            length += 1
+            same_num = 1
+        elif nums[i+1] == nums[i]:
+            length += 1
+            same_num += 1
+        else:
+            check = -check
+            # print(length)
+            # print(same_num)
+            if length > max:
+                max = length
+                length = same_num+1
+                same_num = 1
+
+print(max)
+```
+
+> 틀렸습니다... 짜다 보니 너무 복잡해졌다...  그냥 증가하는 쪽과 감소하는 쪽을 나누어서 한 번씩 탐색하는 것을 해보기로 했다.
+
+```
+N = int(input())
+
+nums = list(map(int,input().split()))
+
+if N <= 2:
+    print(N)
+    exit(0)
+
+length = 1
+max = 0
+
+# bigger
+for i in range(len(nums)):
+    if i+1 == len(nums):
+        if length> max:
+            max = length
+        break
+
+    if nums[i] <= nums[i+1]:
+        length += 1
+    else:
+        if length > max:
+            max = length
+        length = 1
+
+# smaller
+for i in range(len(nums)):
+    if i+1 == len(nums):
+        if length> max:
+            max = length
+        break
+
+    if nums[i] >= nums[i+1]:
+        length += 1
+    else:
+        if length > max:
+            max = length
+        length = 1
+
+print(max)
+```
+
+> 반복문을 두번 돌리려는 것을 한번만 돌리려고 하다 보니 난이도가 확 올라간 것 같다.  
+지금은 숫자가 100000으로 반복문을 두 번 써도 시간적 여유가 많지만 숫자가 더 커지면 지금 이 방법은 문제 해결에 적합하지 않은 것 같다.
