Add 회장뽑기 나의 코드

--- a/_posts/2020-02-02-회장뽑기.md
+++ b/_posts/2020-02-02-회장뽑기.md
@@ -39,3 +39,58 @@
 ```
 
 ---
+
+### 나의 코드
+> 각 사람마다 BFS 탐색을 한 후에 거리의 최댓값이 그 사람의 후보점수이다. 
+
+```
+from collections import deque
+
+people = int(input())
+
+graph = [[] for _ in range(people+1)]
+
+while True:
+    a, b = map(int,input().split())
+
+    if a == -1 and b == -1:
+        break
+
+    graph[a].append(b)
+    graph[b].append(a)
+
+candidate = []
+score = people
+que = deque()
+for i in range(people):
+    dist = [0 for _ in range(people+1)]
+    visit = [False for _ in range(people+1)]
+    que.append(i+1)
+    visit[i+1] = True
+    while que:
+        node = que.popleft()
+        for next_node in graph[node]:
+            if visit[next_node]:
+                continue
+            que.append(next_node)
+            visit[next_node] = True
+            dist[next_node] = dist[node] + 1
+
+    # print(dist)
+    # print(visit)
+    max = 0
+    node_num = 0
+    for j in range(len(dist)):
+        if dist[j] > max:
+            max = dist[j]
+            node_num = i+1
+    if max < score:
+        score = max
+        candidate.clear()
+        candidate.append(node_num)
+    elif max == score:
+        candidate.append(node_num)
+
+print(score,len(candidate))
+print(*candidate)
+```
