Add 자동차경주대회 나의 코드

--- a/_posts/2020-02-03-자동차경주대회.md
+++ b/_posts/2020-02-03-자동차경주대회.md
@@ -39,3 +39,81 @@
 ```
 
 ---
+
+### 나의 코드
+> 출발점부터 각 정비소마다 도달할 수 있는 다음 정비소 번호를 저장해 놓는다.  
+출발점부터 BFS탐색을 시작하면서 각 정비소마다 걸리는 최단 시간을 구한다. 각 정비소에 도달하기 이전의 정비소를 따로 저장해서 나중에 경로를 뽑아 낼 수 있다. 
+
+```
+from collections import deque
+import sys
+
+move = int(input())
+
+station_num = int(input())
+station_loc = [0]
+station_loc += list(map(int,input().split()))
+station_time = [0]
+station_time += list(map(int,input().split()))
+station_time += [0]
+
+nodes = [[] for _ in range(station_num+2)]
+
+for i in range(len(nodes)):
+    dist = 0
+    next_idx = i+1
+    while True:
+        if next_idx >= len(station_loc):
+            break
+        dist += station_loc[next_idx]
+        if dist > move:
+            break
+
+        nodes[i].append(next_idx)
+        next_idx += 1
+
+# print(nodes)
+
+if station_num+1 in nodes[0]:
+    print(0)
+    print(0)
+    sys.exit(0)
+
+time = [0 for _ in range(station_num+2)]
+pre_node = [0 for _ in range(station_num+2)]
+que = deque()
+que.append(0)
+
+while que:
+    now_node = que.popleft()
+    # print(now_node)
+    for next_node in nodes[now_node]:
+        if time[next_node] == 0:
+            time[next_node] = time[now_node]+station_time[next_node]
+            que.append(next_node)
+            pre_node[next_node] = now_node
+        elif time[next_node] > time[now_node]+station_time[next_node]:
+            time[next_node] = time[now_node]+station_time[next_node]
+            que.append(next_node)
+            pre_node[next_node] = now_node
+
+
+# print(time)
+# print(pre_node)
+ans = []
+ans.append(pre_node[-1])
+idx = 0
+
+while not ans[idx] == 0:
+    ans.append(pre_node[ans[idx]])
+    idx+=1
+
+# print(ans)
+ans.pop()
+print(time[-1])
+print(len(ans))
+ans.sort()
+print(*ans)
+```
+
+> 처음부터 틀렸습니다라고 뜨길래 코드도 처음부터 다시 짜보고 했는데, 정비소를 들리지 않아도 될 때 0 두 번 뽑지 않아서 틀렸다고 뜬거였다...
