Add 섬의개수 나의 코드

--- a/_posts/2020-02-04-섬의개수.md
+++ b/_posts/2020-02-04-섬의개수.md
@@ -64,3 +64,60 @@
 ```
 
 ---
+
+### 나의 코드
+> 너비와 높이가 50이하이기 때문에 모든 점에서 BFS 탐색을 실시해도 시간의 문제는 없을 것이다.  
+거리는 구할 필요가 없으니 visit 배열을 공유하면서 BFS탐색을 실시한다. 
+
+```
+from collections import deque
+
+dx = [1,-1,0,0,1,1,-1,-1]
+dy = [0,0,1,-1,1,-1,1,-1]
+
+while True:
+    h, w = map(int,input().split())
+
+    if w == 0 and h == 0:
+        break
+
+    graph = []
+
+    for _ in range(w):
+        graph.append(list(map(int,input().split())))
+    # print(graph)
+    visit = [[False for _ in range(h)] for _ in range(w)]
+    # print(visit)
+    que = deque()
+
+    island_cnt = 0
+
+    for i in range(w):
+        for j in range(h):
+            # print(i,j)
+            if graph[i][j] == 1 and not visit[i][j]:
+                que.append((i,j))
+                visit[i][j] = True
+
+                while que:
+                    now_x, now_y = que.popleft()
+
+                    for k in range(8):
+                        next_x = now_x + dx[k]
+                        next_y = now_y + dy[k]
+
+                        if next_x >= w or next_x < 0 or next_y >= h or next_y < 0:
+                            continue
+
+                        if visit[next_x][next_y]:
+                            continue
+                        if graph[next_x][next_y] == 1:
+                            que.append((next_x,next_y))
+                            visit[next_x][next_y] = True
+
+                island_cnt += 1
+
+    print(island_cnt)
+```
+
+
