Add 아기 상어 중간코드

--- a/_posts/2020-02-04-아기상어.md
+++ b/_posts/2020-02-04-아기상어.md
@@ -41,3 +41,113 @@
 > 첫째 줄에 아기 상어가 엄마 상어에게 도움을 요청하지 않고 물고기를 잡아먹을 수 있는 시간을 출력한다.  
 
 ---
+
+### 나의 코드
+> 조건을 몇 가지로 추려보자면,
+1. 아기 상어보다 크기가 작은 물고기만 먹을 수 있다.
+2. 아기 상어는 물고기가 없거나 아기 상어랑 같은 크기인 물고기가 있는 칸을 지나갈 수 잇다. 
+3. 거리가 가장 가까운 물고기를 먹으러 간다.
+4. 거리가 가까운 물고기가 많다면, 가장 왼쪽상단에 있는 물고기를 먹는다.
+5. 아기 상어는 자신의 크기와 같은 수의 물고기를 먹으면 크기가 1 커진다.  
+
+> BFS 탐색을 한다. 상하좌우의 순서를 상좌하우 순서로 탐색하여 4번의 조건을 만족시킬 수 있다. 상어의 크기와 상어가 먹은 물고기의 수를 데이터로 만든다.  
+
+- BFS 탐색 도중 먹이를 찾았을 때 : visit 초기화
+- BFS 탐색 도중 건너뛰는 경우 
+1. 다음 칸에 아기상어보다 크기가 큰 물고기가 있는 경우
+2. 다음 칸을 이미 방문한 경우
+
+```
+from collections import deque
+
+dx = [-1,0,0,1]
+dy = [0,-1,1,0]
+
+def arr_copy(arr1):
+    result = []
+
+    for row in arr1:
+        tmp = []
+        for num in row:
+            tmp.append(num)
+        result.append(tmp)
+
+    return result
+
+
+lenOfmap = int(input())
+
+graph = []
+
+for _ in range(lenOfmap):
+    graph.append(list(map(int,input().split())))
+
+#data
+x = y = 0
+size = 2
+eaten = 0
+sec = 0
+
+for i in range(lenOfmap):
+    for j in range(lenOfmap):
+        if graph[i][j] == 9:
+            x = i
+            y = j
+            graph[i][j] = 0
+            # print(i,j)
+
+visit = [[False for _ in range(lenOfmap)] for _ in range(lenOfmap)]
+
+que = deque()
+que.append((x,y))
+visit[x][y] = True
+copy_graph = arr_copy(graph)
+# print(copy_graph)
+while que:
+    now_x, now_y = que.popleft()
+
+    for i in range(4):
+        next_x = now_x+dx[i]
+        next_y = now_y+dy[i]
+
+        if next_x >= lenOfmap or next_x < 0 or next_y >= lenOfmap or next_y < 0:
+            continue
+
+        if visit[next_x][next_y]:
+            continue
+
+        if copy_graph[next_x][next_y] == 0 or copy_graph[next_x][next_y] == size:
+            que.append((next_x,next_y))
+            visit[next_x][next_y] = True
+            copy_graph[next_x][next_y] = copy_graph[now_x][now_y] + 1
+            continue
+
+        if copy_graph[next_x][next_y] > size:
+            visit[next_x][next_y] = True
+            continue
+        else:
+            sec += copy_graph[now_x][now_y]+1
+            eaten += 1
+            if eaten == size:
+                size += 1
+                eaten = 0
+            # print(next_x, next_y)
+            # print(size,eaten)
+            # print(sec)
+            que.clear()
+            que.append((next_x,next_y))
+            visit = [[False for _ in range(lenOfmap)] for _ in range(lenOfmap)]
+            visit[next_x][next_y] = True
+            graph[next_x][next_y] = 0
+            copy_graph = arr_copy(graph)
+            # print(copy_graph)
+            break
+
+print(sec)
+```
+
+> 예제 중에 틀리게 나오는 답이 있어서 찾다보니 앞의 조건 중에 4번을 푼 방식이 틀린 거였다.
+
+
+
+
