--- a/_posts/2020-02-04-아기상어.md
+++ b/_posts/2020-02-04-아기상어.md
@@ -146,7 +146,114 @@ while que:
 print(sec)
 ```
 
-> 예제 중에 틀리게 나오는 답이 있어서 찾다보니 앞의 조건 중에 4번을 푼 방식이 틀린 거였다.
+> 예제 중에 틀리게 나오는 답이 있어서 찾다보니 앞의 조건 중에 4번을 푼 방식이 틀린 거였다.  
+같은 시간이 걸리는 거리면 먹이가 있는 점들을 모두 구한 후에 비교해야겠다.
+
+```
+from collections import deque
+
+dx = [-1,0,0,1]
+dy = [0,-1,1,0]
+
+def zero_arr(length):
+    return [[0 for _ in range(length)] for _ in range(length)]
+
+lenOfmap = int(input())
+
+graph = []
+
+for _ in range(lenOfmap):
+    graph.append(list(map(int,input().split())))
+
+#data
+x = y = 0
+size = 2
+eaten = 0
+sec = 0
+
+for i in range(lenOfmap):
+    for j in range(lenOfmap):
+        if graph[i][j] == 9:
+            x = i
+            y = j
+            graph[i][j] = 0
+            # print(i,j)
+
+def bfs(x,y,size,eaten):
+    visit = [[False for _ in range(lenOfmap)] for _ in range(lenOfmap)]
+
+    que = deque()
+    que.append((x,y))
+    visit[x][y] = True
+    dist = zero_arr(lenOfmap)
+    # print(copy_graph)
+    min_d = 100000
+
+    while que:
+        now_x, now_y = que.popleft()
+        if dist[now_x][now_y] >= min_d:
+            break
+        for i in range(4):
+            next_x = now_x+dx[i]
+            next_y = now_y+dy[i]
+
+            if next_x >= lenOfmap or next_x < 0 or next_y >= lenOfmap or next_y < 0:
+                continue
+
+            if visit[next_x][next_y]:
+                continue
+
+            if graph[next_x][next_y] == 0 or graph[next_x][next_y] == size:
+                que.append((next_x,next_y))
+                visit[next_x][next_y] = True
+                dist[next_x][next_y] = dist[now_x][now_y] + 1
+                continue
+
+            if graph[next_x][next_y] > size:
+                continue
+            else:
+                dist[next_x][next_y] = dist[now_x][now_y] + 1
+                que.append((next_x,next_y))
+                visit[next_x][next_y] = True
+                min_d = dist[next_x][next_y]
+    # print(graph)
+    # print(dist)
+    # print(min_d,dist)
+    return min_d, dist
+
+# bfs(x,y,size,eaten)
+while True:
+    checker, d = bfs(x,y,size,eaten)
+
+    if checker == 100000:
+        break
+
+
+    sec += checker
+    # print(sec)
+    flag = False
+    for i in range(lenOfmap):
+        if flag:
+            break
+        for j in range(lenOfmap):
+            if d[i][j] == checker and graph[i][j] != 0 and graph[i][j] != size:
+                # print(graph[i][j])
+                graph[i][j] = 0
+                # print(i,j)
+                # print('---')
+                # print(size, eaten)
+                x = i
+                y = j
+                flag = True
+                break
+    eaten += 1
+    if size == eaten:
+        size += 1
+        eaten = 0
+print(sec)
+```
+
+
 
 
 
