Add 스타트링크 나의 코드

--- a/_posts/2020-02-04-스타트링크.md
+++ b/_posts/2020-02-04-스타트링크.md
@@ -43,3 +43,51 @@ use the stairs
 ```
 
 ---
+
+### 나의 코드 
+> 위 아래로 BFS탐색을 한다. 
+
+```
+from collections import deque
+
+high, my, target, up, down = map(int,input().split())
+
+
+def bfs(high,start,target,up,down):
+    stairs = [0 for _ in range(10000001)]
+    visit = [0 for _ in range(10000001)]
+
+    que = deque()
+    que.append(start)
+    visit[start] = 1
+
+    while que:
+        point = que.popleft()
+        # print(point)
+        up_point = point+up
+        down_point = point-down
+        # print(up_point,down_point)
+        if up_point > high:
+            up_point = point
+        if down_point < 1:
+            down_point = point
+
+        if up_point == target or down_point == target:
+            # print(stairs[:11])
+            return stairs[point]+1
+
+        if not visit[up_point]:
+            que.append(up_point)
+            stairs[up_point] = stairs[point] + 1
+            visit[up_point] = 1
+        if not visit[down_point]:
+            que.append(down_point)
+            stairs[down_point] = stairs[point] + 1
+            visit[down_point] = 1
+    return 'use the stairs'
+
+if my == target:
+    print(0)
+    exit(0)
+print(bfs(high, my, target, up, down))
+```
