Add 안전영역 나의코드

--- a/_posts/2020-02-04-안전영역.md
+++ b/_posts/2020-02-04-안전영역.md
@@ -48,3 +48,69 @@
 ```
 
 ---
+
+### 나의 코드
+> 입력을 받을 때 높이의 최솟값과 최댓값을 구해놓는다.  
+높이를 하나씩 증가시키면서 BFS를 돌리는데 높이 하나당 한 번의 BFS를 돌리기 위해서 visit을 공유하면서 각 점에서 BFS를 한다.
+
+```
+from collections import deque
+
+dx = [1,-1,0,0]
+dy = [0,0,1,-1]
+
+lenOfmap = int(input())
+
+min_num = 101
+max_num = 0
+graph = []
+
+for i in range(lenOfmap):
+    row = list(map(int,input().split()))
+    # print(row)
+    graph.append(row)
+    max_input = max(row)
+    min_input = min(row)
+
+    if max_input > max_num:
+        max_num = max_input
+    if min_input < min_num:
+        min_num = min_input
+
+island_cnt = 1
+h = 0
+for i in range(min_num,max_num+1):
+    visit = [[0 for _ in range(lenOfmap)] for _ in range(lenOfmap)]
+    cnt= 0
+    for x in range(lenOfmap):
+        for y in range(lenOfmap):
+            if graph[x][y] > i:
+                if visit[x][y] == 0:
+                    cnt += 1
+                    que = deque()
+                    que.append((x,y))
+                    visit[x][y] = 1
+
+                    while que:
+                        now_x, now_y = que.popleft()
+
+                        for dir in range(4):
+                            next_x = now_x+dx[dir]
+                            next_y = now_y+dy[dir]
+
+                            if next_x >= lenOfmap or next_x < 0 or next_y >= lenOfmap or next_y < 0:
+                                continue
+                            if visit[next_x][next_y]:
+                                continue
+                            if graph[next_x][next_y] <= i:
+                                continue
+                            que.append((next_x,next_y))
+                            visit[next_x][next_y] = 1
+    if cnt > island_cnt:
+        h = i
+        island_cnt = cnt
+
+print(island_cnt)
+```
+
+> 처음엔 틀렸습니다가 나왔는데, 모두 같은 높이일 경우에 0이 출력되었었다. 기본 Default를 1로 바꾸니까 맞았다!
